# www

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  out.jxl
assets/css/: style.css
assets/images/88x31/: mac.jxl
assets/images/fah_heating/: 75461935704__BCAE8B52-72AC-4650-B21B-CC21C47E1FCF.heic
assets/images/interstellar_70mm/: IMG_5725.heic
content/: 88x31.csv  internal_images.csv
content/posts/: covid_facemasks.md  dns_without_internet.md  ece1100_showcase.md  fah_heating.md  ikea_co2.md  interstellar_70mm.md  scratchdb_update.md  t480_thunderbolt.md
src/: main.rs
src/paths/: about.rs  eighteightthirtyone.rs  matrix.rs  mod.rs  posts.rs  root.rs
src/util/: mod.rs  state.rs
