[package]
name = "holligerme"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.7", features = ["tracing"] }
chrono = "0.4.38"
crc32fast = "1.4.2"
gray_matter = "0.2.8"
lazy_static = "1.5.0"
markdown = "1.0.0-alpha.21"
maud = { version = "0.26.0", features = ["axum"] }
phf = "0.11.1"
serde = { version = "1.0.214", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
crc32fast = "1.4.2"
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"
maud = { version = "0.26.0" }
gray_matter = "0.2.8"
markdown = "1.0.0-alpha.21"
chrono = "0.4.38"
anyhow = "1.0.93"