[package]
name = "holligerme"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

[dependencies]
axum = { version = "0.7.7", features = ["tracing"] }
chrono = "0.4.38"
crc32fast = "1.4.2"
gray_matter = "0.2.8"
markdown = "1.0.0-alpha.21"
maud = { version = "0.26.0", features = ["axum"] }
phf = "0.11.1"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
crc32fast = "1.4.2"
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"
maud = { version = "0.26.0" }
gray_matter = "0.2.8"
markdown = "1.0.0-alpha.21"
chrono = "0.4.38"
katex = "0.4"